--- a/html/comparator_8h_source.html
+++ b/html/comparator_8h_source.html
@@ -72,7 +72,7 @@ $(function() {
 <div class="ttc" id="namespacestd_html"><div class="ttname"><a href="namespacestd.html">std</a></div></div>
 <div class="ttc" id="classhe__cmp_1_1Comparator_html"><div class="ttname"><a href="classhe__cmp_1_1Comparator.html">he_cmp::Comparator</a></div><div class="ttdef"><b>Definition:</b> comparator.h:20</div></div>
 <div class="ttc" id="namespaceNTL_html"><div class="ttname"><a href="namespaceNTL.html">NTL</a></div></div>
-<div class="ttc" id="namespacehelib_html"><div class="ttname"><a href="namespacehelib.html">helib</a></div></div>
+<div class="ttc" id="namespacehelib_html"><div class="ttname"><a href="namespacehelib.html">helib</a></div><div class="ttdef"><b>Definition:</b> binio.cpp:16</div></div>
 </div><!-- fragment --></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
